[package]
name = "melminter-mod"
version = "0.8.5"
authors = ["nullchinchilla <nullchinchilla@pm.me>", "mkn <email@please.see.git.commit>"]
edition = "2021"

description = "Mod Melmint client (modified version by mkn)"
license = "MPL-2.0"
repository = "https://github.com/mknnix/melminter-mod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
themelio-nodeprot = "0.11.5"
tmelcrypt = "0.2.4"
structopt = "0.3.26"
#tracing-subscriber = "0.3.15"
log = "0.4.17"
#tracing = "0.1.35"
# smolscale = "0.3.20"
smol = "1.2.5"
anyhow = "1.0.58"
serde = { version="1.0.140", features=["derive"] }
#serde_json = "1.0.82"
#hex = "0.4.3"
surf = { version="2.3.2", features=["h1-client-rustls"], default-features=false }
stdcode = "0.1.10"
themelio-stf = "0.11.9"
melwallet-client = "0.6.7"
num_cpus = "1.13.1"
themelio-structs = "0.2.10"
themelio-bootstrap = "0.6.1"
fastrand = "1.8.0"
prodash = { version="18", features=["render-tui", "render-tui-crossterm", "unit-human", "render-line", "render-line-crossterm"] }
dashmap = "5.3.4"
#core_affinity = "0.5.10"
env_logger = "0.9.0"
melpow = "0.1.1"
# melpow = { git="https://github.com/mknnix/melpow" }
ctrlc = "3.2.2"

